Add a query selector for getting all the followed-channels, added a css class for hiding elements on the page, added filtering for the followed channels

--- a/twitchCategories.css
+++ b/twitchCategories.css
@@ -1,5 +1,18 @@
+:root{
+  --display-control : none;
+}
+
+.control-display {
+  display: var(--display-control);
+}
+
 .header-text {
   font-size: var(--font-size-6) !important;
   font-weight: var(--font-weight-semibold) !important;
   text-transform: uppercase !important;
+}
+
+.flex-column {
+  display : flex;
+  flex-direction: column;
 }
